# TTS

./: .gitignore  MANIFEST.in  PKGBUILD  README.md  TTS.desktop  base_tts.py  chatterbox_requirements.txt  chatterbox_tts.py  common.py  content.txt  kitten_requirements.txt  kitten_tts.py  kokoro_requirements.txt  kokoro_tts.py  pyproject.toml  requirement_tui.txt  setup.py  tts_runner.py  tts_tui.sh  tui.py
.github/workflows/: daily-tts-trigger.yml  deploy-backend.yml
hf_backend/: Dockerfile  README.md  app.py  download_libs.sh  index.html  pyproject.toml  requirements.txt  tts_results.db  worker.py
hf_backend/app/: main.py
hf_backend/app/api/: routes.py
hf_backend/app/core/: config.py
hf_backend/app/db/: crud.py  database.py
hf_backend/app/services/: worker.py
hf_backend/tts_runner_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tts_runner/: __init__.py  base.py  runner.py  tui.py
tts_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tts_runner/engines/: chatterbox.py  kitten.py  kokoro.py
